2004-04-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.4.

	* Makefile.in (install-package): Install w3m-load.el.
	(dist, tarball): Reimplemented, in order to keep time stamps of
	source files.

	* w3mhack.el (w3mhack-generate-xemacs-load-file): Simplified.

2004-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-xemacs-load-file): Replace
	`replace-string' with basic functions.

2004-04-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-generate-xemacs-load-file): New function.
	(w3mhack-make-package): Use `w3mhack-generate-xemacs-load-file.

2004-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-update-files-autoloads): New function.
	(w3mhack-generate-load-file): Use `w3mhack-update-files-autoloads'.

2004-04-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cgi-board.el (shimbun-clear-contents): Removed.
	(shimbun-make-contents): New method, which is a successor of the
	above method, but returns nil when missing a target article.

	* Makefile.in (tarball): Remove w3m-kwds.el and w3m-load.el.

	* configure.in, aclocal.m4: Add `--with-xml' option.

	* shimbun/sb-zdnet.el: Removed.

	* w3mhack.el (w3mhack-module-list): New function.
	(w3mhack-examine-modules): Use the above.
	(w3mhack-compile): Use `w3mhack-module-list' instead of
	`w3mhack-examine-modules'.
	(w3mhack-generate-load-file): Likewise; Insert ^L to avoid an
	error of `update-file-autoloads' of old emacsen.

2004-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-treat-image-size): Default to t.

	* w3m-filter.el (w3m-filter-asahi-shimbun): Use marker to limit
	the search bound.

2004-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-load-file): Save w3m-load.el file
	before performing `update-file-autoloads'.

2004-04-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (install-lisp): Do not install w3mhack.el.